main.css
/* ... */
  @media screen and (max-width:1500px){
.newarrive_title{
  margin-top: 0%;
}

 }


  @media screen and (max-width:900px){
.newarrive_title{
  margin-top: 0%;
}

 }


  @media screen and (max-width:850px){
.newarrive_title{
  margin-top: -1%;
}

 }

  @media screen and (max-width:550px){
.newarrive_title{
  margin-top: -1%;
}

 }



.newArrive_list{
  display:flex;
  justify-content: center;
  margin-top:2em;
  text-align:center;
}


.newArrive_list>div{
  flex-basis: 26%;
  margin:0 1em;
}

.newArrive_list>div img{
  width:65%;
}




@media screen and (max-width:700px){
.newArrive_list{
flex-direction: column;
}

.newArrive_list>div{
  margin-top: 3%;
}




}



/*new arrive end*/



/*home page end*/






/*check out page start*/


.check_out_button{
    justify-content: center;

    background-color: #EBCA94;
     padding:0.5em 2em;
  
     text-decoration:none;

     border-radius:15px;
    margin-left: 35%;

     border: 2px solid #EBCA94;


}


 .check_out_button:hover{
     background-color: #FDFBFB;
       border-radius:15px;
     color: #EBCA94;
     transition: all 0.5s;
     border: 2px solid #EBCA94;

 }






@media screen and (max-width:800px){

.check_page{
    flex-direction: column;
}

.order_footer{
  margin-top: 30%;
}

.check_out_button{
  font-size: 10pt;
  margin-left: 25%;
}




button .order_button{
 margin-bottom: 50%;
}


.order_button{

     background-color: #EBCA94;
     padding:0.5em 2em;
     color: #FDFBFB;
     text-decoration:none;

     border-radius:15px;
    margin-left: 40%;
       border: 2px solid #FDFBFB;
       font-size: 10pt;
   



 }










}
 



.order_button{
 
     background-color: #EBCA94;
     padding:0.5em 2em;
     /*color: white;*/
     text-decoration:none;

     border-radius:15px;
    margin-left: 30%;
       border: 2px solid #FDFBFB;
       font-size: 12pt;
     
       justify-content: center;


 }






.shipping_part h3{

    margin-top: 0%;
}


.input_name{
  display: flex;
  margin-top: 7%;
  justify-content: space-between;
  color: red;
}



.input_name input{
  flex-basis: 49%;
  /*margin: auto;*/
  color: #ADABAB;
}




#shipping_address {
outline: none;
border-color: black;
border: 1px solid black;   
width:100%;
height: 5vh;
margin-top: 3%;
background-color: #FFF9F9;
 color: #ADABAB;

}

#shipping_address2 {
outline: none;
border-color: black;
border: 1px solid black;   
width:100%;
height: 5vh;
margin-top: 3%;
background-color: #FFF9F9;
 color: #ADABAB;

}


#phone_number {
outline: none;
border-color: black;
border: 1px solid black;   
width:100%;
height: 5vh;
margin-top: 3%;
background-color: #FFF9F9;
 color: #ADABAB;

}

#card_number {
outline: none;
border-color: black;
border: 1px solid black;   
width:100%;
height: 5vh;
margin-top: -5%;
background-color: #FFF9F9;
 color: #ADABAB;

}


.img_line .order_img{
  width: 30%;
}


.line2{
  width: 75%;
  margin-top: 4%;
  margin-bottom: -3%;
}


#emailInput {
outline: none;
border-color: black;
border: 1px solid black;   

width:100%;

height: 5vh;
margin-top: -6%;
background-color: #FFF9F9;


}


#emailInput2 {
outline: none;
border-color: black;
border: 1px solid black;   

width:95%;

height: 5vh;
margin-top: -6%;
background-color: #FFF9F9;


}

#nameInput {
outline: none;
border-color: black;
border: 1px solid black;   
width:95%;
height: 5vh;
margin-top: -6%;
background-color: #FFF9F9;

}

#nameInput2 {
outline: none;
border-color: black;
border: 1px solid black;   

width:95%;

height: 5vh;
margin-top: -6%;
background-color: #FFF9F9;

}


.subtotal_part{
  display: flex;
  justify-content: space-between;
}

.total_end{
  margin-top: 5%;
}





 .order_footer{
  margin-top: 6%;
 }

 .order_button:hover{
     background-color: #FDFBFB;
       border-radius:15px;
     color: #EBCA94;
     transition: all 0.5s;
     border: 2px solid #EBCA94;

 }






.check_page{
  display:flex;
  justify-content: center;
  margin-left: 8%;
   margin-right: 8%;
    margin-top:3em;
  text-align:center;

}

.check_page a{
  color:black;
}

.check_page{
  text-align: left;

}


.check_page{
  text-align: left;


}







.check_page>div{
  /*border:1px solid red;*/
  flex-basis: 40%;
  margin:0 1em;


}

.check_page>div img{
  width:95%;
}





@media screen and (max-width:1000px){

.about_page{
    flex-direction: column;
}

.about_page>div img{
  width:100%;
}

.contact_form {
padding-top: 10%;
padding-bottom: 8%;

}

}



.button{
  margin-top: 7%;
  margin-bottom: 2%;
}

.comments_button_about{
     background-color: #EBCA94;
     padding:0.5em 2em;
     color: #FDFBFB;
     text-decoration:none;

     border-radius:15px;
    /*margin-left: 1%;*/
       border: 2px solid #FDFBFB;
       margin-bottom: 3%;




 }

 .comments_button_about:hover{
     background-color: #FDFBFB;
       border-radius:15px;
     color: #EBCA94;
     transition: all 0.5s;
     border: 2px solid #EBCA94;

 }






.contact_form{
  margin-top: 0%;
  /*border:2px solid red;*/

}


.check_left{
  text-align: left;


}


.check_right{
  text-align: left;

}


/*check out page end*/

/*complete page start*/

.notice{
  /*border:2px solid red;*/
  width: 30%;
  margin: auto;
   margin-top: 4%;
  height: 50vh;
  text-align: center;
  background-color: #FBECEC;
  color: #EBCA94;
  margin-bottom: 8%;

}
.notice p{
 margin-bottom: 14%;

}

.notice h1{
  padding-top: 12%;
}

.complete_logo{
  text-align: center;
  margin-top: 4%;
  color: #EBCA94;
}



.complete_button{
     background-color: #EBCA94;
     padding:0.5em 2em;
     color:#FDFBFB;
     text-decoration:none;

     border-radius:15px;
     margin-top: 5%;




 }

 .complete_button:hover{
     background-color: #FDFBFB;
       border-radius:15px;
     color: #EBCA94;
     transition: all 1s;

 }

@media screen and (max-width:1000px){

.notice{
  /*border:2px solid red;*/
  width: 50%;
  margin: auto;
   margin-top: 4%;
  height: 50vh;
  text-align: center;
  background-color: #FBECEC;
  color: #EBCA94;


}


}
/* ... */

